--- a/todo
+++ b/todo
@@ -1,4 +1,2 @@
-move to hooks
-doesn't actually keep time
-look into adding the bins for dbmate/runz
 unpause takes to long to restart
+setup a way to clear local storage
