keeps track of time across page change and reloads

--- a/todo
+++ b/todo
@@ -1,2 +1,3 @@
 unpause takes to long to restart
 setup a way to clear local storage
+right now it keeps track of time on reload, page change, but will start from where it left off on exit (which is most likely fine)
