the service worker doesn't respawn, but the rest of the logic is off

--- a/todo
+++ b/todo
@@ -1,3 +1,5 @@
+Broken, the refresh/start logic doesn't work.
 unpause takes to long to restart
 setup a way to clear local storage
 right now it keeps track of time on reload, page change, but will start from where it left off on exit (which is most likely fine)
+setup the build properly, have the server bundled and something that runs off the dist/ content
