added tailwind, jeez.

--- a/todo
+++ b/todo
@@ -1,3 +1,5 @@
+the time diplayed doesn't properly add 0 to low seconds
+make a % win for practicer
 unpause takes to long to restart
 make data stay across page change
 have components dispay reminder in currently opened page
