--- a/todo
+++ b/todo
@@ -3,3 +3,4 @@ make a % win for practicer
 unpause takes to long to restart
 make data stay across page change
 have components dispay reminder in currently opened page
+add a component that holds cheatsheets, basically quicker versions of notes
