added a bunch of stuff I guess

--- a/todo
+++ b/todo
@@ -1,4 +1,7 @@
+convert stuff.ods to this
+make a calendar page
 the reset and stop button fuck with the text areas, forcing you to erase and retype the times, either keep them working, or clear them on start
+add checklists
 make a % win for practicer
 unpause takes to long to restart
 make data stay across page change
