--- a/todo
+++ b/todo
@@ -1,12 +1,7 @@
+adding a page with the same name overwrites the existing page
 convert stuff.ods to this
-make a calendar page
 the reset and stop button fuck with the text areas, forcing you to erase and retype the times, either keep them working, or clear them on start
-add checklists
-make a % win for practicer
 unpause takes to long to restart
-make data stay across page change
-have components dispay reminder in currently opened page
 add a component that holds cheatsheets, basically quicker versions of notes
 make sense of the webpack config file cause it's a mess
-test the build process
 look into the "didn't interact with the document" thing
